# secure-note

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: nightly.yml
debian/DEBIAN/: control  postinst
lib/: CMakeLists.txt
lib/encryption/: CMakeLists.txt  encryption.h
lib/utils/: CMakeLists.txt  logger.h  string_utils.h
src/: CMakeLists.txt  crypto.h  gui.c  gui.h  main.c  main.cpp  note_app.cpp  note_app.h  note_app_config.cpp  note_app_config.h  note_app_utils.cpp  note_app_utils.h
src/crypto/: crypto.c
src/gui/: gui.c  gui.h
src/gui/main_window/: main_window.c  main_window.h
src/gui/menu/: menu_bar.c  menu_bar.h
src/gui/status_bar/: status_bar.c  status_bar.h
src/gui/text_view/: text_view.c  text_view.h
src/gui/tool_bar/: tool_bar.c  tool_bar.h
src/main/: main.c
ui/: CMakeLists.txt  ui.h
